tests/integration/conformance/testdata/security/authorizationPolicy/basic/mcp.yaml
constraints:
  - collection: istio/security/v1beta1/authorizationpolicies
    check:
      - exactlyOne:
          - equals: {
            "Body": {
              "selector": {
                "match_labels": {
                  "app": "httpbin",
                  "version": "v1"
                }
              },
              "rules": [
              {
                "from": [
                {
                  "source": {
                    "namespaces": [
                      "test"
                    ]
                  }
                }
                ],
                "to": [
                {
                  "operation": {
                    "methods": [
                      "GET"
                    ]
                  }
                }
                ]
              }
              ]
            },
            "Metadata": {
              "name": "{{.Namespace}}/authorization-policy"
            },
            "TypeURL": "type.googleapis.com/istio.security.v1beta1.AuthorizationPolicy"
          }
